--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -6,7 +6,7 @@
   align-items: center;
 
   padding: 1rem 2rem;
-  background: rgba(3, 16, 62, 0.25);
+  background: rgba(3, 16, 62, 0.50);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   position: fixed;
@@ -29,4 +29,50 @@
 
 .app__navbar-links {
   flex: 1;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+
+  list-style: none;
+
+  li {
+    margin: 0 1rem;
+    cursor: pointer;
+
+    flex-direction: column;
+
+    div {
+      width: 5px;
+      height: 5px;
+      background: transparent;
+      border-radius: 50%;
+
+      margin-bottom: 5px;
+    }
+
+    a {
+      color: var(--white-color);
+      text-decoration: none;
+      flex-direction: column;
+      font-size: 1.2rem;
+      text-transform: uppercase;
+      font-weight: 500;
+
+      transition: all 0.3s ease-in-out;
+
+      &:hover {
+        color: var(--secondary-color);
+      }
+
+      .nav-icon {
+        font-size: 2rem;
+      }
+    }
+   &:hover{
+    div {
+      background-color: var(--secondary-color);
+    }
+   }
+  }
 }
+
