--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   --font-base: "Dosis", sans-serif;
 
   --primary-color: #edf2f8;
-  --secondary-color: #313bac;
+  --secondary-color: #FA9F42;
   --black-color: #030303;
   --lightGray-color: #e4e4e4;
   --gray-color: #6b7688;
