--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -52,6 +52,18 @@
     }
   }
 
+  p {
+    margin-top: 0.5rem;
+    padding: 0 6rem;
+    letter-spacing: 1px;
+    text-align: center;
+    font-size: 1.2rem;
+
+    @media screen and (max-width: 900px) {
+      margin-top: 1.5rem;
+    }
+  }
+
   .blur {
     position: absolute;
     width: 7rem;
