--- a/src/container/Footer/Footer.scss
+++ b/src/container/Footer/Footer.scss
@@ -7,14 +7,9 @@
   background-color: var(--white-color);
 }
 
-.app__footer-form {
-  display: flex;
-  flex-direction: column;
-}
-
 .contact__form-container {
   box-shadow: 0 7px 29px 0 rgba(0, 0, 0, 0.2) ;
-  background:  rgba(3, 0, 7, 0.3);
+  background:  var(--beige-color);
   padding: 4rem;
   max-width: 40rem;
   width: 80%;
@@ -29,6 +24,9 @@
 }
 
 .app__footer-form {
+
+  display: flex;
+  flex-direction: column;
 
   div {
     width: 100%;
@@ -52,7 +50,7 @@
       outline: none;
 
       &:hover {
-        box-shadow: 0 0 25px var(--primary-color);
+        box-shadow: 0 0 15px var(--white-color);
       }
     }
 
@@ -64,6 +62,12 @@
   .button-container {
     display: flex;
     align-items: flex-end;
+
+    p {
+      color: var(--darkRed-color);
+      font-weight: 500;
+      font-size: 1.2rem;
+    }
   }
 
   button {
@@ -90,6 +94,41 @@
     @media screen and (max-width: 768px) {
       width: 100%;
       margin: 1rem 0;
+    }
+  }
+}
+
+.contact__form-sent {
+  color: var(--white-color);
+  text-transform: uppercase;
+  font-weight: 500;
+  transition: all 0.3s ease-in-out;
+
+  @media screen and (max-width: 768px) {
+    margin-bottom: 5rem;
+    color: var(--black-color);
+  }
+}
+
+.app__footer-copyright {
+  width: 100%;
+  background-color: var(--beige-color);
+  color: var(--black-color);
+  font-weight: 500;
+  margin-top: 3rem;
+  padding: 3rem 0;
+
+  a {
+    color: var(--white-color);
+    text-decoration: none;
+    flex-direction: column;
+    font-size: 1rem;
+    font-weight: 500;
+
+    transition: all 0.3s ease-in-out;
+
+    &:hover {
+      color: var(--secondary-color);
     }
   }
 }
