--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -59,4 +59,13 @@
   font-weight: 600;
   color: #666;
   text-transform: uppercase;
+
+  @media screen and (max-width: 450px) {
+    padding: 0.2rem 0.5rem;
+    margin-bottom: 1.5rem;
+    margin-right: 0.5rem;
+    font-size: 1rem;
+    border-radius: 5px;
+    font-weight: 500;
+  }
 }
