--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -6,7 +6,8 @@
   align-items: center;
 
   padding: 1rem 2rem;
-  background: rgba(155, 155, 155, 0.50);
+  background-color: var(--backgroundDark-color);
+  // background: rgba(153, 142, 106, 0.5);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   position: fixed;
