--- a/src/container/About/About.scss
+++ b/src/container/About/About.scss
@@ -4,7 +4,7 @@
   // height: 90vh;
   flex-direction: column;
 
-  background-color: var(--white-color);
+  background-color: var(--backgroundLight-color);
 
   padding: 6rem 2rem 5rem;
 }
@@ -25,6 +25,7 @@
 .about__content-title {
   font-size: 1.5rem;
   margin-bottom: 1.5rem;
+  color: var(--backgroundDark-color);
 }
 
 .about__content-main {
@@ -35,7 +36,7 @@
   font-size: 1.2rem;
 
   span {
-    color: var(--saje-color);
+    color: var(--navy-color);
     font-weight: 600;
   }
 }
