--- a/src/container/Footer/Footer.scss
+++ b/src/container/Footer/Footer.scss
@@ -4,12 +4,12 @@
   padding-top: 6rem;
   flex-direction: column;
 
-  background-color: var(--white-color);
+  background-color: var(--backgroundLight-color);
 }
 
 .contact__form-container {
   box-shadow: 0 7px 29px 0 rgba(0, 0, 0, 0.2) ;
-  background:  var(--beige-color);
+  background:  var(--backgroundDark-color);
   padding: 4rem;
   max-width: 40rem;
   width: 80%;
@@ -36,13 +36,22 @@
 
     margin: 0.75rem 0;
 
+    label {
+      color: var(--white-color);
+
+      @media screen and (max-width: 768px) {
+        color: var(--black-color);
+      }
+
+    }
+
     input,
     textarea {
       width: 100%;
       padding: 0.95rem;
       border: none;
       border-radius: 7px;
-      background-color: var(--primary-color);
+      background-color: var(--white-color);
 
       font-family: var(--font-base);
       font-size: 1rem;
@@ -88,7 +97,7 @@
     cursor: pointer;
 
     &:hover {
-      background-color: #2430af;
+      background-color: var(--backgroundLight-color);
     }
 
     @media screen and (max-width: 768px) {
@@ -112,8 +121,8 @@
 
 .app__footer-copyright {
   width: 100%;
-  background-color: var(--beige-color);
-  color: var(--black-color);
+  background-color: var(--backgroundDark-color);
+  color: var(--white-color);
   font-weight: 500;
   margin-top: 3rem;
   padding: 3rem 0;
@@ -123,7 +132,7 @@
     text-decoration: none;
     flex-direction: column;
     font-size: 1rem;
-    font-weight: 500;
+    font-weight: 800;
 
     transition: all 0.3s ease-in-out;
 
