--- a/src/container/Projects/Projects.scss
+++ b/src/container/Projects/Projects.scss
@@ -2,7 +2,7 @@
   flex: 1;
   width: 100%;
   flex-direction: column;
-  background-color: var(--beige-color);
+  background-color: var(--backgroundDark-color);
   padding-top: 6rem;
 
   h2 {
