--- a/src/container/Projects/Projects.scss
+++ b/src/container/Projects/Projects.scss
@@ -66,13 +66,17 @@
     transition: all 0.3s ease;
 
     &:hover {
-      box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 0 25px rgba(255, 255, 255, 0.2);
     }
 
     @media screen and (min-width: 2000px) {
       width: 470px;
       padding: 1.25rem;
       border-radius: 0.75rem;
+    }
+
+    @media screen and (max-width: 768px) {
+      cursor: default;
     }
 
     @media screen and (max-width: 300px) {
@@ -97,6 +101,12 @@
 
   @media  screen and (min-width: 2000px) {
     height: 350px;     
+  }
+
+  .app__project-hover {
+    @media screen and (max-width: 768px) {
+      display: none;
+    }
   }
 }
 
@@ -132,6 +142,10 @@
       height: 50%;
       color: var(--white-color);
     }
+
+    @media screen and (max-width: 768px) {
+      display: none;
+    }
   }
 }
 
@@ -144,6 +158,24 @@
   h4 {
     margin-top: 1rem;
     line-height: 1.5;
+  }
+
+  .app__project-mobilelink {
+    display: none;
+    
+    @media screen and (max-width: 768px) {
+      display:flex;
+      flex-direction: row;
+      gap: 1rem;
+      margin-top: 0.5rem;
+      margin-bottom: -0.5rem;
+
+      svg {
+        width: 100%;
+        height: 100%;
+        color: var(--secondary-color);
+      }
+    }
   }
 
   .app__project-tag {
